--- a/package.json
+++ b/package.json
@@ -13,66 +13,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.6",
-    "@angular/common": "~9.1.6",
-    "@angular/compiler": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/localize": "^9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
-    "@ckeditor/ckeditor5-angular": "^1.1.0",
+    "@angular/animations": "^9.1.11",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/localize": "^9.1.11",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-balloon": "^15.0.0",
     "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "@fullcalendar/angular": "^4.4.5-beta",
-    "@fullcalendar/bootstrap": "^4.3.0",
-    "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0",
-    "@fullcalendar/interaction": "^4.3.0",
-    "@fullcalendar/list": "^4.3.0",
-    "@fullcalendar/timegrid": "^4.3.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@fullcalendar/bootstrap": "^4.4.2",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.4.2",
+    "@fullcalendar/list": "^4.4.2",
+    "@fullcalendar/timegrid": "^4.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-select/ng-select": "^3.0.7",
-    "angular-archwizard": "^5.0.0",
+    "angular-archwizard": "^5.0.1",
     "angularx-flatpickr": "^6.1.1",
-    "apexcharts": "^3.8.6",
-    "bootstrap": "^4.3.1",
-    "feather-icons": "^4.24.1",
+    "apexcharts": "^3.19.2",
+    "bootstrap": "^4.5.0",
+    "class-transformer": "^0.2.3",
+    "feather-icons": "^4.28.0",
     "flatpickr": "^4.6.2",
-    "metismenujs": "^1.1.0",
-    "ng-apexcharts": "^1.0.5",
+    "metismenujs": "^1.2.0",
+    "ng-apexcharts": "^1.3.0",
     "ng-click-outside": "^5.1.1",
-    "ngx-bootstrap": "^5.1.2",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-color-picker": "^8.2.0",
     "ngx-drag-drop": "^2.0.0",
     "ngx-dropzone-wrapper": "^8.0.0",
-    "ngx-mask": "^8.0.6",
-    "rxjs": "~6.5.3",
-    "smooth-scrollbar": "^8.3.1",
-    "tslib": "^1.10.0",
+    "ngx-mask": "^8.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.5",
+    "smooth-scrollbar": "^8.5.2",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler-cli": "~9.1.6",
-    "@angular/language-service": "~9.1.6",
+    "@angular-devkit/build-angular": "^0.901.9",
+    "@angular/cli": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.12.47",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.8.3",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
